# Munder-Difflin-Multi-Agent-System-Project

./: CODE_REVIEW.md  README.md  README_ADVANCED.md  demo_advanced_features.py  evaluation_summary.md  financial_report.json  main_advanced.py  munder_difflin.db  pyproject.toml  quick_demo.py  run_evaluation.py  setup.sh  test_new_features.py  test_results.csv
docs/: agents_docs.md  analise_step2.md  documentacao_project_starter_functions.md  munder_difflin_project_master_index.md  pydantic_ai_cheet_sheet.md  pydantic_ai_guide.md  quickstart.md  reflection_report.md  rubrica.txt  verificacao_mudancas_diagrama.md  workflow_diagram_corrected.md  workflow_diagrama_atualizado_c_tools.md
figs/: munder_difflin_flow.mmd
src/: config.py  database.py  dependencies.py  evaluation.py  project_starter.py  test_config.py
src/agents/: business_advisor.py  customer_agent.py  inventory_agent.py  orchestrator.py  quoting_agent.py  reordering.py  sales_agent.py
src/tools/: inventory_tools.py  quoting_tools.py  sales_tools.py
src/utils/: logging_config.py  terminal_animation.py
tests/: conftest.py  test_agents.py  test_dependencies_only.py  test_integration.py  test_inventory_agent.py  test_quoting_agent.py  test_readiness.py  test_simple.py  test_summary.md  test_tools.py  test_tools_fixed.py  test_tools_simple.py  testing_documentation.md  testing_suite.md
